move values to config file

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "IronSettings": {
+    "AngleOpenMotor1": 140,
+    "AngleOpenMotor2": 40,
+    "AngleCloseMotor1": 0,
+    "AngleCloseMotor2": 180,
+    "MinimumPulse": 500,
+    "MaximumPulse": 2500,
+    "MotorSpeed": 2,
+    "EyeSwitchLed": 17
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
