fix fix fix fix

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -5,9 +5,10 @@
     "AngleCloseMotor1": 0,
     "AngleCloseMotor2": 180,
     "MinimumPulse": 500,
-    "MaximumPulse": 2500,
+    "MaximumPulse": 2000,
     "MotorSpeed": 2,
-    "EyeSwitchLed": 17
+    "EyeSwitchLed": 17,
+    "MotorSleep": 20
   },
   "Logging": {
     "LogLevel": {
