--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -8,7 +8,11 @@
     "MaximumPulse": 2000,
     "MotorSpeed": 2,
     "EyeSwitchLed": 17,
-    "MotorSleep": 20
+    "MotorSleep": 20,
+    "HelmetLed1Pos": 0,
+    "HelmetLed2Pos":1,
+    "HelmetLedColor": "White"
+
   },
   "Logging": {
     "LogLevel": {
