--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,17 +1,17 @@
 {
   "IronSettings": {
-    "AngleOpenMotor1": 140,
-    "AngleOpenMotor2": 40,
+    "AngleOpenMotor1": 160,
+    "AngleOpenMotor2": 20,
     "AngleCloseMotor1": 0,
     "AngleCloseMotor2": 180,
     "MinimumPulse": 500,
     "MaximumPulse": 2000,
-    "MotorSpeed": 2,
+    "MotorSpeed": 10,
     "EyeSwitchLed": 17,
-    "MotorSleep": 20,
+    "MotorSleep": 25,
     "HelmetLed1Pos": 0,
-    "HelmetLed2Pos":1,
-    "HelmetLedColor": "White"
+    "HelmetLed2Pos": 1,
+    "HelmetLedColor": "Blue"
 
   },
   "Logging": {
